# stack-installer

./: .gitignore  LICENSE  Main.hs  README.md  make-installers.bat  stack-installer.cabal  stack.yaml  upload-installers.bat  upload-installers.sh
